css/daniel-valencia-portfolio.webflow.css
/* ... */
.project-8-modal-popup {
  z-index: 7;
  width: 100vw;
  height: 100vh;
  color: #1a1b1f;
  display: none;
  position: fixed;
  overflow: visible;
}

.modal-content-8 {
  height: 800px;
  grid-column-gap: 19px;
  grid-row-gap: 16px;
  grid-template-rows: auto auto;
  grid-template-columns: 3fr 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: stretch;
  margin: 10px auto auto;
  display: grid;
  position: relative;
  overflow: visible;
}

.project-9-modal-popup {
  z-index: 7;
  width: 100vw;
  height: 100vh;
  color: #1a1b1f;
  display: none;
  position: fixed;
  overflow: visible;
}

.modal-content-9 {
  height: 800px;
  grid-column-gap: 19px;
  grid-row-gap: 16px;
  grid-template-rows: auto auto;
  grid-template-columns: 3fr 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: stretch;
  margin: 10px auto auto;
  display: grid;
  position: relative;
  overflow: visible;
}

.slider-9 {
  width: 300px;
  height: 550px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: block;
  position: relative;
  overflow: visible;
}

.slider-8 {
  width: 300px;
  height: 450px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: block;
  position: relative;
  overflow: visible;
}

.project-form-5 {
  width: 920px;
  height: 760px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-form6 {
  width: 920px;
  height: 780px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-form-6 {
  width: 920px;
  height: 920px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-10-modal-popup {
  z-index: 7;
  width: 100vw;
  height: 100vh;
  color: #1a1b1f;
  display: none;
  position: fixed;
  overflow: visible;
}

.modal-content-10 {
  height: 800px;
  grid-column-gap: 19px;
  grid-row-gap: 16px;
  grid-template-rows: auto auto;
  grid-template-columns: 3fr 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: stretch;
  margin: 10px auto auto;
  display: grid;
  position: relative;
  overflow: visible;
}

.slider-10 {
  width: 300px;
  height: 600px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: block;
  position: relative;
  overflow: visible;
}

.project-form-3 {
  width: 920px;
  height: 1100px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-11-modal-popup {
  z-index: 7;
  width: 100vw;
  height: 100vh;
  color: #1a1b1f;
  display: none;
  position: fixed;
  overflow: visible;
}

.project-form-4 {
  width: 920px;
  height: 800px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: block;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-form-7, .project-form-8 {
  width: 920px;
  height: 820px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.project-form-9 {
  width: 920px;
  height: 1060px;
  background-color: #fff;
  flex-direction: column;
  margin: auto;
  padding: 20px;
  display: flex;
  position: absolute;
  top: 0%;
  bottom: 0%;
  left: 0%;
  right: 0%;
  box-shadow: 0 0 20px 20px rgba(0, 0, 0, .25);
}

.slider-11 {
  width: 300px;
  height: 600px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  display: block;
  position: relative;
  overflow: visible;
}
/* ... */

